add iio interface of control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,9 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(inc)
 
-add_executable(sdr main.cpp inc/sdrDevice.h src/sdrDevice.cpp)
+add_executable(sdr main.cpp inc/sdrDevice.h
+        inc/ad9361.h
+        inc/iio.h
+        src/sdrDevice.cpp inc/log.h src/log.cpp)
+
+target_link_libraries(sdr iio ad9361 uhd)
